--- a/MenStyle.css
+++ b/MenStyle.css
@@ -5,5 +5,5 @@ h1 {
 body {
     background-color: darkgray;
     font-family: 'Times New Roman', Times, serif;
-    color: azure;
+    color: black;
 }
